--- a/src/pages/technician/chart-room/chart-room.html
+++ b/src/pages/technician/chart-room/chart-room.html
@@ -17,21 +17,21 @@
   <ion-grid class="icon_chart">
     <ion-row>
       <ion-col>
-        <img src="assets/imgs/customer.png">
+        <img src="assets/imgs/customer.png" (click)="customer_rating()">
         <div>ระดับความพึงพอใจของลูกค้า</div>
       </ion-col>
     </ion-row>
 
     <ion-row class="icon_chart">
         <ion-col>
-          <img src="assets/imgs/calendar.png">
+          <img src="assets/imgs/calendar.png" (click)="equipment_mont()">
           <div>อุปกรณ์ที่รับซ่อมในแต่ละเดือน</div>
         </ion-col>
       </ion-row>
 
       <ion-row class="icon_chart">
           <ion-col>
-            <img src="assets/imgs/clipboard.png">
+            <img src="assets/imgs/clipboard.png" (click)="customer_amount()">
             <div>จำนวนลูกค้าที่มาใช้บริการ</div>
           </ion-col>
         </ion-row>
