creat toggle search toolbar action and edit listview fulldisplay

--- a/src/pages/data-rent/data-rent.html
+++ b/src/pages/data-rent/data-rent.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the SerachPage page.
+  Generated template for the DataRentPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,10 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>serach</ion-title>
-    <ion-buttons end>
-      <button ion-button (click)="closeModal()">Close</button>
-    </ion-buttons>
+    <ion-title>dataRent</ion-title>
   </ion-navbar>
 
 </ion-header>
