--- a/src/pages/customer/customer.html
+++ b/src/pages/customer/customer.html
@@ -1,41 +1,5 @@
-<!--
-  Generated template for the CustomerPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar hideBackButton>
-    <ion-title>customer</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-    <ion-grid >
-      <ion-row class="Icons">
-          <ion-col (click)="searchPromt()">
-              <img src="assets/imgs/placeholder.png" >
-              <div class="text">ค้นหา</div>
-          </ion-col>
-          
-      </ion-row>
-
-      <ion-row class="Icons">
-        <ion-col (click)="DataForRent()">
-        <img src="assets/imgs/research.png">
-        <div class="text">ข้อมูลการจอง</div>
-      </ion-col>
-      </ion-row>
-
-      <ion-row class="Icons">
-        <ion-col (click)="logout()"> 
-          <img src="assets/imgs/exit.png">
-          <div>ออกจากระบบ</div>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-
-</ion-content>
+<ion-tabs>
+    <ion-tab [root]="searchRoot" tabTitle="Search" tabIcon="ios-search-outline"></ion-tab>
+    <ion-tab [root]="dataRentRoot" tabTitle="Data rent" tabIcon="ios-clipboard-outline"></ion-tab>
+    <ion-tab  tabTitle="Logout" tabIcon="ios-log-out-outline" (ionSelect)="logout()"></ion-tab>
+</ion-tabs>
