--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,12 +14,12 @@
         <ion-row>
             <ion-col>
               <ion-item>
-                  <ion-input [(ngModel)]="username" type="text" placeholder="Username" clearInput ></ion-input>
+                  <ion-input [(ngModel)]="username" type="text" placeholder="Username" clearInput required></ion-input>
                 </ion-item>
        
             
               <ion-item>
-                  <ion-input [(ngModel)]="password" type="password" placeholder="Password" clearInput ></ion-input>
+                  <ion-input [(ngModel)]="password" type="password" placeholder="Password" clearInput required></ion-input>
                 </ion-item>
             </ion-col>
           </ion-row>
