--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -30,7 +30,7 @@
 
 
 <ion-content>
-  <ion-list no-lines >
+  <ion-list  >
     <button ion-item *ngFor="let item of items " detail-push (click)="area_name(item)">
       {{ item.area_name }}
     </button>
