--- a/src/pages/technician/bulid-room/bulid-room.html
+++ b/src/pages/technician/bulid-room/bulid-room.html
@@ -31,7 +31,7 @@
       
       <ion-item col-6>
         <ion-label stacked>บัญชีธนาคาร</ion-label>
-        <ion-input  type="text" formControlName="account" [(ngModel)]="account"></ion-input>
+        <ion-input  type="tel" formControlName="account" [(ngModel)]="account"></ion-input>
       </ion-item>
     </ion-row>
 
