--- a/src/pages/technician/rent/rent.html
+++ b/src/pages/technician/rent/rent.html
@@ -19,10 +19,14 @@
             <b> วันที่รับซ่อม: 00/00/00 </b> 
         </ion-card-header>
         <ion-card-content >
+
+          <p class="detail" >
+              <b >ชื่อ:</b> 123456789
+              <b style=" margin-left:13px;">นามสกุล:</b> 123456789
+          </p>
           <p class="detail">
               <b>บ้านเลขที่:</b> 123/456 
               <b>ถนน:</b> 123456789
-              
           </p>    
           <p class="detail">
               <b>แขวง:</b> 123456789 &nbsp;
@@ -31,7 +35,7 @@
 
           <p class="detail">
           <b>เบอร์โทรศัพท์:</b> 0123456789
-          <button  ion-button icon-left clear small style="margin-bottom:10px;" >โทร</button>
+          <button  ion-button icon-left clear small style="margin-bottom:10px;" > <ion-icon name="call" color="secondary"></ion-icon>โทร</button>
         </p>
         </ion-card-content>
       </ion-card>
