record guest for rent technician success

--- a/src/pages/data-rent/data-rent.html
+++ b/src/pages/data-rent/data-rent.html
@@ -13,10 +13,9 @@
 </ion-header>
 
 
-<ion-content padding>
- 
+<ion-content nopadding>
 
-  <ion-card>
+  <!-- <ion-card >
       <ion-card-header>
           <p class="detail" >
               <b> วันที่ส่งซ่อม: 00/00/00 </b> 
@@ -41,6 +40,5 @@
         <button  ion-button icon-left clear small style="margin-bottom:10px;" > <ion-icon name="call" color="secondary"></ion-icon>โทร</button>
       </p>
       </ion-card-content>
-    </ion-card>
-
+    </ion-card> -->
 </ion-content>
