--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -26,7 +26,7 @@
 
           <ion-row>
             <ion-col class="sigeup"> 
-                <button ion-button class="submit-btn" full type="submit" (click)="login()">เข้าสู่ระบบ</button>
+                <button ion-button class="submit-btn" full type="submit" (click)="login(items_login)">เข้าสู่ระบบ</button>
           <button ion-button class="register-btn" block clear color="danger" (click)="alert(item)" >สมัครสมาชิก</button>
             </ion-col>
           </ion-row>
