--- a/src/pages/detail-tec/detail-tec.html
+++ b/src/pages/detail-tec/detail-tec.html
@@ -27,9 +27,12 @@
       </ion-row>
 
       <ion-row>
-        <h4> ที่อยู่ร้านค้า:</h4>
+        <h4> รายละเอียดร้านค้า:</h4>
       </ion-row>
-
+      <!-- <ion-row>
+        <div col-7>เวลาทำการ:{{technician_store.time_start}} - {{technician_store.time_end}}</div>
+        <div col-5>ประเภท:{{technician_store.type_name}}</div>
+      </ion-row> -->
       <ion-row>
         <div col-6>บ้านเลขที่:{{technician_store.home_number}}</div>
         <div col-6>ถนน:{{technician_store.street}}</div>
@@ -38,7 +41,7 @@
       <ion-row>
         <div col-6>แขวง:{{technician_store.district}}</div>
         <div col-6>เขต:{{technician_store.area_name}}</div>
-      </ion-row>
+      </ion-row> 
 
       <ion-row>
         <p>
