--- a/src/pages/detail-tec/detail-tec.html
+++ b/src/pages/detail-tec/detail-tec.html
@@ -47,7 +47,7 @@
         <p>
           เบอร์โทรศัพท์: {{technician_store.tel_technician}}
           <button  ion-button icon-left clear  style="margin-bottom:10px;" color="dark"> 
-            <ion-icon name="call" color="secondary"></ion-icon>
+            <ion-icon name="call" color="secondary" (click)=" call_tec()"></ion-icon>
             โทรหาช่าง</button>
         </p>
         <!-- <div><button ion-button>โทรหาช่าง</button></div> -->
