--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>register</ion-title>
+    <ion-title>สมัครสมาชิก</ion-title>
   </ion-navbar>
 
 </ion-header>
