--- a/src/pages/technician/chart-room/chart-content-customer/chart-content-customer.html
+++ b/src/pages/technician/chart-room/chart-content-customer/chart-content-customer.html
@@ -37,11 +37,11 @@
   <div *ngIf="chart">
       
     <div style="text-align:center"><b><h3>จำนวนลูกค้าให้การประเมิน</h3></b></div>
-    <div style="text-align:center">
+    <!-- <div style="text-align:center">
         <ion-icon name="ios-cube-outline" style="color:red"></ion-icon>
         จำนวนเรตติ้ง:คะแนนเรตติ้ง
-    </div>
-    <canvas id="canvas" style="margin-top:30px">{{chart}}</canvas>
+    </div> -->
+    <canvas id="canvas" style="margin-top:30px"  width="500" height="500">{{chart}}</canvas>
   </div>
   
 </ion-content>
