--- a/src/pages/technician/chart-room/equipment-mount/equipment-mount.html
+++ b/src/pages/technician/chart-room/equipment-mount/equipment-mount.html
@@ -16,21 +16,20 @@
 
 
 <ion-content padding>
-    <ion-item>
-        <ion-label>ค้นหา</ion-label>
-        <ion-datetime displayFormat="MM:  YYYY" pickerFormat="MM : YYYY" [(ngModel)]="event.month"></ion-datetime>
+      <ion-item>
+          <ion-label>ค้นหา</ion-label>
+        <ion-datetime displayFormat="MMM/YYYY"  
+        monthShortNames='มกราคม,กุมภาพันธ์,มีนาคม,เมษายน,พฤษภาคม,มิถุนายน,กรกฎาคม,สิงหาคม,กันยายน,ตุลาคม,พฤศจิกายน,ธันวาคม' 
+        doneText="ตกลง" cancelText="ยกเลิก" 
+        placeholder="กรุณาเลือกเดือน"
+        [(ngModel)]="myDate"
+        (ionChange)="submit(myDate)"
+        >
+      </ion-datetime>
       </ion-item>
 
-     
-<div class="block">
-  <canvas baseChart
-    [data]='ChartsData'
-    [labels]='ChartsLables'
-    [chartType]='ChartsType'
-  >
-
-  </canvas>
-  
+<div *ngIf="chart" >
+  <canvas  id="canvas" width="500" height="500" style="margin-top:50px">{{chart}}</canvas>
 </div>
 </ion-content>
 
