--- a/src/pages/technician/chart-room/chart-room.html
+++ b/src/pages/technician/chart-room/chart-room.html
@@ -25,7 +25,7 @@
     <ion-row class="icon_chart">
         <ion-col>
           <img src="assets/imgs/calendar.png" (click)="equipment_mont()">
-          <div>อุปกรณ์ที่รับซ่อมในแต่ละเดือน</div>
+          <div>อุปกรณ์ที่รับซ่อม</div>
         </ion-col>
       </ion-row>
 
