--- a/src/pages/technician/chart-room/customer-amount/customer-amount.html
+++ b/src/pages/technician/chart-room/customer-amount/customer-amount.html
@@ -16,16 +16,16 @@
 <ion-content padding>
     <ion-item>
         <ion-label>ค้นหา</ion-label>
-      <ion-datetime displayFormat="DD/MMM/YYYY"  
+      <ion-datetime displayFormat="YYYY"  
       monthShortNames='มกราคม,กุมภาพันธ์,มีนาคม,เมษายน,พฤษภาคม,มิถุนายน,กรกฎาคม,สิงหาคม,กันยายน,ตุลาคม,พฤศจิกายน,ธันวาคม' 
       doneText="ตกลง" cancelText="ยกเลิก" 
-      placeholder="กรุณาเลือกเดือน"
+      placeholder="กรุณาเลือกปี"
       [(ngModel)]="myDate"
-      (ionChange)="submit(myDate)"
-      >
+      (ionChange)="submit(myDate)">
     </ion-datetime>
     </ion-item>
-
+   
+    
     <div *ngIf="chart">
       <canvas  id="canvas" width="500" height="500" style="margin-top:50px">{{chart}}</canvas>
     </div>
