--- a/src/pages/technician/admin-detail/admin-detail.html
+++ b/src/pages/technician/admin-detail/admin-detail.html
@@ -34,7 +34,7 @@
       <p class="detail">
       <b>เบอร์โทรศัพท์:</b> 0123456789
       <button  ion-button icon-left clear small style="margin-bottom:10px;" (click)="tel_admin(0123456789)" >
-          <ion-icon name="search" color="secondary"></ion-icon>
+          <ion-icon ios="ios-call" md="md-call" color="secondary"></ion-icon>
         โทร
       </button>
     </p>
