sing up success

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -31,7 +31,7 @@
                   <ion-icon name="ios-log-in-outline"></ion-icon>
                 </button>
                 <div style="margin-top:25px">
-                    <button ion-button icon-end class="register-btn" round  color="secondary" (click)="alert(item)" >
+                    <button ion-button icon-end class="register-btn" round  color="secondary" (click)="alert(1)" >
                         สมัครสมาชิกแบบลูกค้า
                         <ion-icon name="md-contact"></ion-icon>
                       </button>
