--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -24,6 +24,18 @@
             </ion-col>
           </ion-row>
 
+
+          <div style="text-align:center">
+                <ion-row radio-group [(ngModel)]="status">
+                    <ion-col>
+                        <ion-radio value="1" checked></ion-radio>
+                        <b style="margin-left:5px">เข้าสู่ระบบลูกค้า</b>
+                        <ion-radio value="2" ></ion-radio>
+                        <b style="margin-left:5px">เข้าสู่ระบบช่าง</b>
+                    </ion-col>
+                  </ion-row>
+          </div>
+
           <ion-row>
             <ion-col class="sigeup"> 
                 <button ion-button icon-end class="submit-btn" round type="submit" (click)="login(items_login)">
@@ -31,7 +43,7 @@
                   <ion-icon name="ios-log-in-outline"></ion-icon>
                 </button>
                 <div style="margin-top:25px">
-                    <button ion-button icon-end class="register-btn" round  color="secondary" (click)="alert(1)" >
+                    <button ion-button icon-end class="register-btn" round  color="secondary" (click)="register_guest(1)" >
                         สมัครสมาชิกแบบลูกค้า
                         <ion-icon name="md-contact"></ion-icon>
                       </button>
