updata check status

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -57,7 +57,7 @@
 
               <ion-row style="margin-top:15px;">
                   <ion-col></ion-col>
-                  <button ion-button color="secondary" [disabled]="!check_login.valid" (click)="login(items_login)">ยืนยัน</button>
+                  <button ion-button color="secondary" [disabled]="!check_login.valid" (click)="login()">ยืนยัน</button>
                   <ion-col></ion-col>
                 </ion-row>
           </form>
